2009-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-attach-file, mml-attach-buffer, mml-attach-external):
	Don't move point if the command is invoked inside the message header.

2009-08-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-attach-file, mml-attach-buffer, mml-attach-external):
	Don't save excursion.

2009-08-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-safe-html-newsgroups): New user option.

	* gnus-art.el (gnus-bind-safe-url-regexp): New macro.
	(gnus-mime-view-all-parts, gnus-mime-view-part-internally)
	(gnus-mm-display-part, gnus-mime-display-single)
	(gnus-mime-display-alternative): Use gnus-bind-safe-url-regexp to
	override mm-w3m-safe-url-regexp according to gnus-safe-html-newsgroups.

	* gnus-sum.el
	(gnus-mark-copied-or-moved-articles-as-expirable): New user option.
	(gnus-summary-move-article): Add expirable mark to articles copied or
	moved to group that has auto-expire turned on if the option is non-nil.

2009-07-24  Glenn Morris  <rgm@gnu.org>

	* gnus-demon.el (gnus-demon-add-nntp-close-connection):
	Fix typo.  (Bug#3903)

2009-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-mode-map): Bind the "e" key to
	gnus-article-read-summary-keys rather than gnus-summary-edit-article
	that should not be used for draft articles.
	(gnus-article-read-summary-keys): Use key-binding instead of lookup-key
	that has no concern in minor mode keys.
	(gnus-article-summary-command, gnus-article-summary-command-nosave):
	Abolish.

2009-07-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-request-article): Allow mml-to-mime to generate MIME
	article without making inquiry to a user for unknown encoding.

	* nnmaildir.el (nnmaildir--group-maxnum, nnmaildir--new-number)
	(nnmaildir--scan): Assume i-node and device number that file-attributes
	returns might be cons-cell.

	* dgnushack.el: Autoload thing-at-point for XEmacs 21.5.

	* lpath.el: Fbind cp-supported-codepages for XEmacs 21.5.
